--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,14 +1,14 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  width: 80%;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
 
   font-weight: normal;
 }
 
-a,
+/* a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
@@ -32,4 +32,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
